<resources>
    <string name="app_name">ShoeStore</string>
    <string name="login_screen_app_title">Chaussure</string>
    <string name="login_screen_subtitle">Experience the world\'s best shoe store app</string>
    <string name="email_label_text">Email:</string>
    <string name="email_input_hint">Enter your email</string>
    <string name="password_label_text">Password:</string>
    <string name="password_input_hint">Enter your password</string>
    <string name="login_button_text">Login</string>
    <string name="create_account_button_text">Create Account</string>
    <string name="welcome_title_text_1">Welcome to</string>
    <string name="welcome_title_text_2">Chaussure</string>
    <string name="welcome_screen_description_text">Store your favorite shoes so you can order them again or share them to your friends!</string>
    <string name="welcome_next_button_text">Next</string>
    <string name="welcome_screen_shoe_icon_description_text">Colored shoe icon</string>
    <string name="instructions_title_text">How to use the app</string>
    <string name="instructions_screen_illustration_description">An illustration of the app\'s UI to add a new shoe item to the list.</string>
    <string name="instructions_screen_desctiption_text">Add a new shoe by tapping on the + sign, then enter its details in order to save it</string>
    <string name="instructions_next_button_test">Let\'s go!</string>
    <string name="shoelist_fab_description">Add a new shoe to the list</string>
    <string name="logout_menu_text">Logout</string>
    <string name="shoe_detail_screen_title">Add a new shoe</string>
    <string name="shoe_detail_input_name_hint">Shoe name</string>
    <string name="shoe_detail_input_company_hint">Shoe company</string>
    <string name="shoe_detail_input_size_hint">Shoe size</string>
    <string name="shoe_detail_cancel_button_text">Cancel</string>
    <string name="shoe_detail_save_button_text">Save</string>
    <string name="shoe_item_image_description">Shoe item image</string>
    <string name="shoe_item_text_divider">/</string>
    <string name="shoe_detail_fields_empty_error_message">One of the fields is empty! Please fill in all the fields</string>
    <string name="shoe_detail_size_field_wrong_format">The shoe size should be a number!</string>
    <string name="shoe_name_label">Shoe Name:</string>
    <string name="shoe_company_label">Shoe Company:</string>
    <string name="shoe_size_label">Shoe Size:</string>
</resources>
